--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,8 @@
+absl-py==2.1.0
 annotated-types==0.7.0
+appnope==0.1.4
+asttokens==2.4.1
+astunparse==1.6.3
 beautifulsoup4==4.12.3
 blis==0.7.11
 catalogue==2.0.10
@@ -8,48 +12,71 @@ charset-normalizer==3.3.2
 chest==0.2.3
 click==8.1.7
 cloudpathlib==0.18.1
+comm==0.2.2
 confection==0.1.5
 contourpy==1.2.1
 cwl-eval==1.0.12
 cycler==0.12.1
 cymem==2.0.8
+debugpy==1.8.2
+decorator==5.1.1
 Deprecated==1.2.14
 dill==0.3.8
 docker==7.1.0
 en-core-web-lg @ https://github.com/explosion/spacy-models/releases/download/en_core_web_lg-3.7.1/en_core_web_lg-3.7.1-py3-none-any.whl#sha256=ab70aeb6172cde82508f7739f35ebc9918a3d07debeed637403c8f794ba3d3dc
 en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.7.1/en_core_web_sm-3.7.1-py3-none-any.whl#sha256=86cc141f63942d4b2c5fcee06630fd6f904788d2f0ab005cce45aadb8fb73889
+exceptiongroup==1.2.2
+executing==2.0.1
 fasteners==0.19
 filelock==3.15.4
+flatbuffers==24.3.25
 fonttools==4.53.1
 fsspec==2024.6.1
 ftfy==6.2.0
+gast==0.6.0
 gdown==4.7.3
+google-pasta==0.2.0
+grpcio==1.65.1
+h5py==3.11.0
 HeapDict==1.0.1
 huggingface-hub==0.24.0
 idna==3.7
 ijson==3.3.0
 imbalanced-learn==0.10.1
 inscriptis==2.5.0
+ipykernel==6.29.5
+ipython==8.26.0
 ir_datasets==0.5.8
 ir_measures==0.3.3
+jedi==0.19.1
 Jinja2==3.1.4
 joblib==1.4.2
+jupyter_client==8.6.2
+jupyter_core==5.7.2
+keras==3.4.1
+keras-nightly==3.4.1.dev2024073003
 kiwisolver==1.4.5
 langcodes==3.4.0
 language_data==1.2.0
+libclang==18.1.1
 llvmlite==0.39.1
 lxml==5.2.2
 lz4==4.3.3
 marisa-trie==1.2.0
+Markdown==3.6
 markdown-it-py==3.0.0
 MarkupSafe==2.1.5
 matchpy==0.5.5
 matplotlib==3.9.1
+matplotlib-inline==0.1.7
 mdurl==0.1.2
+ml-dtypes==0.4.0
 more-itertools==10.3.0
 mpmath==1.3.0
 multiset==2.1.1
 murmurhash==1.0.10
+namex==0.0.8
+nest-asyncio==1.6.0
 networkx==3.3
 nltk==3.8.1
 nptyping==1.4.4
@@ -57,12 +84,23 @@ numba==0.56.4
 numpy==1.23.5
 opencv-python==4.10.0.84
 openTSNE==0.7.1
+opt-einsum==3.3.0
+optree==0.12.1
 packaging==24.1
 pandas==2.2.2
+parso==0.8.4
 patsy==0.5.6
+pexpect==4.9.0
 pillow==10.4.0
+platformdirs==4.2.2
 preshed==3.0.9
+prompt_toolkit==3.0.47
+protobuf==4.25.4
+psutil==6.0.0
 pt-datasets==0.19.24
+ptyprocess==0.7.0
+pure_eval==0.2.3
+pyarrow==17.0.0
 pydantic==2.8.2
 pydantic_core==2.20.1
 Pygments==2.18.0
@@ -77,6 +115,7 @@ python-terrier==0.10.1
 pytrec_eval-terrier==0.5.6
 pytz==2024.1
 PyYAML==6.0.1
+pyzmq==26.0.3
 regex==2024.5.15
 requests==2.32.3
 rich==13.7.1
@@ -94,17 +133,28 @@ spacy-legacy==3.0.12
 spacy-loggers==1.0.5
 spacy-lookups-data==1.0.5
 srsly==2.4.8
+stack-data==0.6.3
 statsmodels==0.14.2
 sympy==1.13.1
+tb-nightly==2.18.0a20240730
+tensorboard==2.17.0
+tensorboard-data-server==0.7.2
+tensorflow==2.17.0
+tensorflow-io-gcs-filesystem==0.37.1
+termcolor==2.4.0
 textdescriptives==2.8.2
 textstat==0.7.4
+tf_keras==2.17.0
+tf_nightly==2.18.0.dev20240729
 thinc==8.2.5
 threadpoolctl==3.5.0
 tira==0.0.136
 tokenizers==0.19.1
 torch==2.0.1
 torchvision==0.15.2
+tornado==6.4.1
 tqdm==4.66.4
+traitlets==5.14.3
 transformers==4.42.4
 trec-car-tools==2.6
 typer==0.12.3
@@ -119,6 +169,7 @@ warc3-wet-clueweb09==0.2.5
 wasabi==1.1.3
 wcwidth==0.2.13
 weasel==0.4.1
+Werkzeug==3.0.3
 wget==3.2
 wrapt==1.16.0
 xxhash==3.4.1
